--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  word-wrap: break-word;
 }
 form[data-form] {
   .parent {
@@ -141,6 +142,7 @@ input {
   font-size: medium;
   border: none;
   outline: none;
+  text-transform: capitalize;
 }
 
 .btn-primary {
