type and weaknesses

--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,11 @@ input {
   border: none;
   outline: none;
   margin: 10px;
+  border-radius: 13px;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
+  -ms-border-radius: 13px;
+  -o-border-radius: 13px;
 }
 
 ul {
@@ -193,6 +198,11 @@ ul {
   height: 38%;
   width: 100%;
 }
+@media (max-width: 300px) {
+  .eldiv {
+    height: 50%;
+  }
+}
 
 .heart {
   transform: scale(0.45);
@@ -219,18 +229,25 @@ ul {
 @media (max-width: 300px) {
   .divImg {
     min-width: 176.75px;
+    height: 50%;
+  }
+}
+
+@media (max-width: 300px) {
+  .weaknesses {
+    max-width: 100px;
   }
 }
 
 select {
   padding: 5px;
-  border-radius: 13px;
+  border-radius: 20px;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-  -webkit-border-radius: 13px;
-  -moz-border-radius: 13px;
-  -ms-border-radius: 13px;
-  -o-border-radius: 13px;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 option {
@@ -249,16 +266,46 @@ button {
 
 input,
 button {
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
-@media (max-width: 260px) {
+@media (max-width: 255px) {
+  form[data-form2] {
+    justify-content: center;
+  }
+}
+form[data-form2] svg {
+  width: 34px;
+  height: 34px;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: 15px 0 0 15px;
+  -webkit-border-radius: 15px 0 0 15px;
+  -moz-border-radius: 15px 0 0 15px;
+  -ms-border-radius: 15px 0 0 15px;
+  -o-border-radius: 15px 0 0 15px;
+  border-right: 1px solid #aaa;
+}
+form[data-form2] input {
+  border-left: 1px solid #aaa;
+  border-radius: 0 15px 15px 0;
+  -webkit-border-radius: 0 15px 15px 0;
+  -moz-border-radius: 0 15px 15px 0;
+  -ms-border-radius: 0 15px 15px 0;
+  -o-border-radius: 0 15px 15px 0;
+}
+@media (max-width: 305px) {
   form[data-form2] input {
     width: 100px;
+  }
+}
+@media (max-width: 190px) {
+  form[data-form2] input {
+    width: 90px;
   }
 }
 
@@ -279,4 +326,15 @@ p {
   justify-content: space-between;
   border-radius: 20px;
   max-width: 265px;
+}
+
+@media (max-width: 769px) {
+  .header {
+    justify-content: space-between;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    justify-content: center;
+  }
 }/*# sourceMappingURL=main.css.map */
