--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,6 @@
   word-wrap: break-word;
 }
 
-form[data-form] .parent {
-  max-width: 1200px;
-}
-
 header {
   display: flex;
   align-items: center;
@@ -50,27 +46,12 @@ body {
   gap: 30px;
 }
 
-.divImg {
-  border-bottom: 3px solid !important;
-  border-top: transparent !important;
-  border-left: transparent !important;
-  border-right: transparent !important;
-}
-
 .divRight {
   width: 10%;
   height: 100%;
   display: flex;
   align-items: baseline;
   justify-content: center;
-}
-
-.divLeftBottom {
-  display: flex;
-  align-items: center;
-  font-weight: 700;
-  position: relative;
-  gap: 40%;
 }
 
 .divLeft {
@@ -115,19 +96,13 @@ h1 img {
   display: none;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  align-items: center;
-  justify-content: center;
-}
-
 .parent {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  max-width: 1200px;
   gap: 20px;
-  justify-content: center;
+  justify-content: space-around;
 }
 @media (max-width: 210px) {
   .parent div {
@@ -138,14 +113,6 @@ ul {
   .parent div input {
     width: 85%;
   }
-}
-
-form,
-.parent {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
 }
 
 input {
@@ -173,6 +140,10 @@ input {
 ul {
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 286px) {
   ul li {
@@ -206,10 +177,6 @@ ul {
 
 .heart {
   transform: scale(0.45);
-  -webkit-transform: scale(0.45);
-  -moz-transform: scale(0.45);
-  -ms-transform: scale(0.45);
-  -o-transform: scale(0.45);
 }
 
 .left-div {
@@ -225,6 +192,10 @@ ul {
   align-items: center;
   justify-content: center;
   width: 101%;
+  border-bottom: 3px solid !important;
+  border-top: transparent !important;
+  border-left: transparent !important;
+  border-right: transparent !important;
 }
 @media (max-width: 300px) {
   .divImg {
@@ -254,6 +225,13 @@ option {
   text-align: center;
 }
 
+.divLeftBottom {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  position: relative;
+  gap: 40%;
+}
 @media (max-width: 300px) {
   .divLeftBottom {
     gap: 10%;
@@ -271,6 +249,7 @@ button {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  max-width: 122px;
 }
 
 @media (max-width: 255px) {
@@ -316,7 +295,6 @@ p {
 
 .elli {
   background-color: #fff;
-  padding: 0 1px;
   margin: 10px;
   min-height: 360px;
   height: 360px;
@@ -337,4 +315,18 @@ p {
   .header {
     justify-content: center;
   }
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-direction: column;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }/*# sourceMappingURL=main.css.map */
