--- a/css/main.css
+++ b/css/main.css
@@ -329,4 +329,17 @@ form {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+}
+
+img[data-img]:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transition: 0.8s ease;
+  -webkit-transition: 0.8s ease;
+  -moz-transition: 0.8s ease;
+  -ms-transition: 0.8s ease;
+  -o-transition: 0.8s ease;
 }/*# sourceMappingURL=main.css.map */
