--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -309,16 +309,17 @@ form {
   align-items: center;
   flex-wrap: wrap;
 }
-
-img[data-img]:hover {
+.elli:hover{
+img[data-img] {
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
-  transition: .8s ease;
-  -webkit-transition: .8s ease;
-  -moz-transition: .8s ease;
-  -ms-transition: .8s ease;
-  -o-transition: .8s ease;
+  transition: all .8s ease-in-out;
+  -webkit-transition: all .8s ease-in-out;
+  -moz-transition: all .8s ease-in-out;
+  -ms-transition: all .8s ease-in-out;
+  -o-transition: all .8s ease-in-out;
+}
 }
