--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ header {
   width: -o-moz-aviable;
   flex-wrap: wrap;
   gap: 20px;
+  background-color: #ffd845;
 }
 @media (max-width: 530px) {
   header {
@@ -261,7 +262,6 @@ button {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  max-width: 122px;
 }
 
 @media (max-width: 255px) {
@@ -350,9 +350,9 @@ form {
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
-  transition: all 0.8s ease-in-out;
-  -webkit-transition: all 0.8s ease-in-out;
-  -moz-transition: all 0.8s ease-in-out;
-  -ms-transition: all 0.8s ease-in-out;
-  -o-transition: all 0.8s ease-in-out;
+  transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
+  -webkit-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
+  -moz-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
+  -ms-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
+  -o-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
 }/*# sourceMappingURL=main.css.map */
