--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,24 @@
   word-wrap: break-word;
 }
 
+::-moz-selection {
+  background-color: cyan;
+  color: rgb(75, 56, 56);
+}
+
+::selection {
+  background-color: cyan;
+  color: rgb(75, 56, 56);
+}
+
+img::-moz-selection {
+  background-color: transparent;
+}
+
+img::selection {
+  background-color: transparent;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -37,8 +55,10 @@ header {
 
 form[data-form2] {
   display: none;
-  min-width: 157px;
   justify-content: center;
+}
+form[data-form2] input {
+  width: 116px !important;
 }
 @media (max-width: 530px) {
   form[data-form2] {
@@ -47,6 +67,11 @@ form[data-form2] {
     align-items: center;
     width: -o-moz-aviable;
     min-width: 100px !important;
+  }
+}
+@media (max-width: 414px) {
+  form[data-form2] {
+    margin-bottom: 10px;
   }
 }
 
@@ -116,6 +141,11 @@ h1 img {
   max-width: 1200px;
   gap: 20px;
   justify-content: space-around;
+}
+@media (max-width: 414px) {
+  .parent {
+    max-width: 150px;
+  }
 }
 @media (max-width: 210px) {
   .parent div {
@@ -210,9 +240,13 @@ ul {
   border-left: transparent !important;
   border-right: transparent !important;
 }
+.divImg img {
+  max-width: 209.76px;
+}
 @media (max-width: 300px) {
   .divImg {
     min-width: 176.75px;
+    max-width: 176.75px;
     height: 50%;
   }
 }
@@ -291,7 +325,7 @@ form[data-form2] input {
 }
 @media (max-width: 305px) {
   form[data-form2] input {
-    width: 100px;
+    width: 62% !important;
   }
 }
 @media (max-width: 190px) {
@@ -316,6 +350,11 @@ p {
   justify-content: space-between;
   border-radius: 20px;
   max-width: 265px;
+}
+@media (max-width: 300px) {
+  .elli {
+    max-width: 176.75px;
+  }
 }
 
 @media (max-width: 421px) {
@@ -344,15 +383,30 @@ form {
   flex-wrap: wrap;
 }
 
-.elli:hover img[data-img] {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  -o-transform: scale(1.2);
-  transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
-  -webkit-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
-  -moz-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
-  -ms-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
-  -o-transition: 0.8s cubic-bezier(0, -2.45, 1, 3.53);
+@media (min-width: 400px) {
+  .elli:hover img[data-img] {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transition: 0.8s cubic-bezier(1, -2.45, 1, 3.53);
+    -webkit-transition: 0.8s cubic-bezier(1, -2.45, 1, 3.53);
+    -moz-transition: 0.8s cubic-bezier(1, -2.45, 1, 3.53);
+    -ms-transition: 0.8s cubic-bezier(1, -2.45, 1, 3.53);
+    -o-transition: 0.8s cubic-bezier(1, -2.45, 1, 3.53);
+  }
+}
+select[data-select],
+select[data-select-weaknesses] {
+  width: 130px;
+}
+
+.filter {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 10px;
 }/*# sourceMappingURL=main.css.map */
