--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
   word-wrap: break-word;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 ::-moz-selection {
   background-color: cyan;
   color: rgb(75, 56, 56);
@@ -63,8 +67,8 @@ form[data-form2] input {
 @media (max-width: 530px) {
   form[data-form2] {
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
     width: -o-moz-aviable;
     min-width: 100px !important;
   }
@@ -374,6 +378,7 @@ main {
   justify-content: center;
   gap: 10px;
   flex-direction: column;
+  margin-top: 10px;
 }
 
 form {
@@ -409,4 +414,18 @@ select[data-select-weaknesses] {
   justify-content: space-around;
   flex-wrap: wrap;
   gap: 10px;
+}
+
+.up-div {
+  transform: rotate(270deg);
+  position: fixed;
+  right: 10px;
+  top: 92%;
+  z-index: 10;
+}
+.up-div a {
+  text-decoration: none;
+  padding: 15px;
+  background-color: #0d6efd;
+  border-radius: 50%;
 }/*# sourceMappingURL=main.css.map */
