--- a/scss/block/_pokemons.css
+++ b/scss/block/_pokemons.css
@@ -6,6 +6,10 @@
   word-wrap: break-word;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 ::selection {
   background-color: cyan;
   color: #4b3838;
@@ -245,7 +249,7 @@ ul {
 }
 
 .divImg img {
-  max-width: calc((262.2px / 100)*80);
+  max-width: calc((262.2px / 100) * 80);
 }
 
 @media (max-width: 300px) {
@@ -386,6 +390,7 @@ main {
   justify-content: center;
   gap: 10px;
   flex-direction: column;
+  margin-top: 10px;
 }
 
 form {
@@ -422,4 +427,19 @@ select[data-select-weaknesses] {
   justify-content: space-around;
   flex-wrap: wrap;
   gap: 10px;
+}
+
+.up-div {
+  transform: rotate(270deg);
+  position: fixed;
+  right: 10px;
+  top: 92%;
+  z-index: 10;
+}
+
+.up-div a {
+  text-decoration: none;
+  padding: 15px;
+  background-color: #0d6efd;
+  border-radius: 50%;
 }
