--- a/scss/block/_pokemons.css
+++ b/scss/block/_pokemons.css
@@ -63,8 +63,8 @@ form[data-form2] input {
 @media (max-width: 530px) {
   form[data-form2] {
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
     width: -o-moz-aviable;
     min-width: 100px !important;
   }
@@ -430,16 +430,27 @@ select[data-select-weaknesses] {
 }
 
 .up-div {
-  transform: rotate(270deg);
   position: fixed;
   right: 10px;
   top: 92%;
   z-index: 10;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: #0d6efd;
 }
 
 .up-div a {
   text-decoration: none;
-  padding: 15px;
-  background-color: #0d6efd;
   border-radius: 50%;
+}
+
+.up-div a img {
+  transform: scale(0.5);
+}
+
+@media (max-width: 500px) {
+  .up-div {
+    right: 0;
+  }
 }
