--- a/scss/block/_pokemons.scss
+++ b/scss/block/_pokemons.scss
@@ -24,7 +24,7 @@ header {
   gap: 20px;
   @media (max-width: 530px) {
     justify-content: center;
-    .parent img {
+    .parent svg {
       display: none;
     }
   }
@@ -55,7 +55,7 @@ form[data-form2] {
 }
 body {
   background-color: var(--bg-my);
-  // background-color: #ffc107;
+  transition: 0.5s linear;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -127,6 +127,8 @@ h1 {
   }
 }
 input {
+  background-color: var(--input);
+  color: var(--black-white);
   width: 150px;
   text-align: center;
   padding: 5px;
@@ -177,6 +179,7 @@ ul {
 .eldiv {
   height: 38%;
   width: 100%;
+  color: var(--black-white);
   @media (max-width: 300px) {
     height: 50%;
   }
@@ -196,12 +199,13 @@ ul {
   align-items: center;
   justify-content: center;
   width: 101%;
-  border-bottom: 3px solid !important;
+  border-bottom: 3px solid var(--black-white);
   border-top: transparent !important;
   border-left: transparent !important;
   border-right: transparent !important;
   img {
     max-width: calc((262.2px / 100) * 80);
+    color: var(--black-white);
   }
   @media (max-width: 300px) {
     min-width: 176.75px;
@@ -218,7 +222,8 @@ select {
   padding: 5px;
   border-radius: 20px;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: var(--bg-select);
+  color: var(--black-white);
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
@@ -226,6 +231,7 @@ select {
 }
 option {
   text-align: center;
+  background-color: var(--white-black);
 }
 .divLeftBottom {
   display: flex;
@@ -252,17 +258,21 @@ form[data-form2] {
   @media (max-width: 255px) {
     justify-content: center;
   }
-  svg {
-    width: 34px;
-    height: 34px;
-    padding: 5px;
-    background-color: #fff;
-    border-radius: 15px 0 0 15px;
-    -webkit-border-radius: 15px 0 0 15px;
-    -moz-border-radius: 15px 0 0 15px;
-    -ms-border-radius: 15px 0 0 15px;
-    -o-border-radius: 15px 0 0 15px;
-    border-right: 1px solid #aaa;
+  label{
+    svg {
+      width: 34px;
+      height: 34px;
+      padding: 5px;
+      background-color: var(--input);
+      color: var(--gray-white);
+      border-radius: 15px 0 0 15px;
+      -webkit-border-radius: 15px 0 0 15px;
+      -moz-border-radius: 15px 0 0 15px;
+      -ms-border-radius: 15px 0 0 15px;
+      -o-border-radius: 15px 0 0 15px;
+      border-right: 1px solid #aaa;
+    }
+
   }
   input {
     border-left: 1px solid #aaa;
@@ -284,7 +294,7 @@ p {
   text-transform: capitalize;
 }
 .elli {
-  background-color: #fff;
+  background-color: var(--input);
   margin: 10px;
   min-height: 360px;
   height: 360px;
@@ -361,17 +371,54 @@ select[data-select-weaknesses] {
   a {
     text-decoration: none;
     border-radius: 50%;
-    img {
+    svg {
       transform: scale(0.5);
+      color: var(--black-white);
     }
   }
   @media (max-width:500px) {
     right: 0;
   }
+}.dark-div {
+  position: fixed;
+  display: flex;
+  right: 10px;
+  top: 84%;
+  z-index: 10;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: #0d6efd;
+  color: var(--black-white);
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  @media (max-width:500px) {
+    right: 0;
+  }
 }
+
 li[data-not-found]{
   list-style:none;
   font-weight: 900;
   font-size: 30px;
   text-align: center;
+  color:var(--black-white);
+}
+
+.dark-theme{
+  ::placeholder{
+    color: var(--input-color);
+}
+}
+
+.search-div{
+  color:var(--black-white)
+}
+
+.divRight{
+  svg{
+    transform: scale(1.5);
+  }
+  color: var(--black-white);
 }
