--- a/css/my.css
+++ b/css/my.css
@@ -1,9 +1,43 @@
-:root{
-    --bg-my:#ffd845;
-    --bg-dark:#343a40;
+:root {
+  --bg-my: #ffd845;
+  --bg-dark: #343a40;
+  --bg-select: rgba(255, 255, 255, 0.3);
+  --dark: #000;
+  --input-color: rgba(255, 255, 255, 0.3);
+  --white: #fff;
+  --input: #fff;
+  --white-black: #fff;
+  --black-white: #000;
+  --gray-white: #aaa;
 }
 
-.dark-theme{
-    --bg-my:#343a40;
-    --bg-dark:#343a40;
+.dark-theme {
+    --bg-my: #343a40;
+    --bg-dark: #343a40;
+    --input-color: #fff;
+    --white-black: #000;
+    --input: rgba(255, 255, 255, 0.3);
+    --black-white: #fff;
+    --gray-white: #fff;
+
 }
+
+/* .dark-theme{
+} */
+/* 
+@keyframes dark-mode {
+  14% {
+  }
+  28% {
+  }
+  42% {
+  }
+  56% {
+  }
+  70% {
+  }
+  84% {
+  }
+  100% {
+  }
+} */
